crates/pcb-zen-core/tests/snapshots/interface__interface_anonymous_interface_error.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Error: test.zen:5:10-7:2 Anonymous interfaces are not allowed. All interfaces must be assigned to a variable (e.g., MyInterface = interface(...))
