crates/pcb-zen-core/tests/snapshots/interface__interface_comprehensive_net_promotion.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Basic Net promotion - Power -> Net: Net { name: "_VCC", id: "<ID>", symbol: Value(NoneType) }
Deep promotion test - Level3 instance: Level3(level2=using(Level2(extra=42, level1=using(Level1(meta="level1", net=using(Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }))))))
Deep Net promotion - Level3 -> Net: Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }
Intermediate promotions:
  Level3 -> Level2: Level2(extra=42, level1=using(Level1(meta="level1", net=using(Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }))))
  Level3 -> Level1: Level1(meta="level1", net=using(Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }))
Net consistency check:
  Direct from Level3: Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }
  Via Level2: Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }
  Via Level1: Net { name: "level2_level1_DEEP", id: "<ID>", symbol: Value(NoneType) }
Module {
    name: "<root>",
    source: "test.zen",
}
[]
