crates/pcb-zen-core/tests/snapshots/interface__interface_field_validation_errors.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Error: test.zen:35:12-32 Interface field 'NET' expects Net, got Ground
