crates/pcb-zen-core/tests/snapshots/interface__interface_field_validation_mixed_types.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.zen",
}
[]
