crates/pcb-zen-core/tests/snapshots/interface__interface_field_validation_net_to_interface.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Error: test.zen:10:14-38 Interface field 'power' expects Ground, got Net
