crates/pcb-zen-core/tests/snapshots/interface__interface_invoke_with_net_override.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Default instance net: Net { name: "INST1_DEFAULT", id: "<ID>", properties: {"symbol_name": Value("DefaultSymbol")}, symbol: Value(Symbol { name: "DefaultSymbol", pins: {"1": Value("A")} }) }
Override instance net: Net { name: "OVERRIDE", id: "<ID>", properties: {"symbol_name": Value("OverrideSymbol")}, symbol: Value(Symbol { name: "OverrideSymbol", pins: {"2": Value("B")} }) }
Module {
    name: "<root>",
    source: "test.zen",
}
[]
