crates/pcb-zen-core/tests/snapshots/interface__interface_multiple_instances_independent_symbols.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
IO1 net: Net { name: "IO1_IO", id: "<ID>", properties: {"symbol_name": Value("IOSymbol")}, symbol: Value(Symbol { name: "IOSymbol", pins: {"1": Value("IO")} }) }
IO2 net: Net { name: "IO2_IO", id: "<ID>", properties: {"symbol_name": Value("IOSymbol")}, symbol: Value(Symbol { name: "IOSymbol", pins: {"1": Value("IO")} }) }
Module {
    name: "<root>",
    source: "test.zen",
}
[]
