crates/pcb-zen-core/tests/snapshots/interface__interface_nested_composition.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
UART TX: MCU_UART_UART_TX
UART RX: MCU_UART_UART_RX
USART embedded UART TX: MCU_USART_uart_UART_TX
USART embedded UART RX: MCU_USART_uart_UART_RX
USART CK: MCU_USART_USART_CK
USART RTS: MCU_USART_USART_RTS
USART CTS: MCU_USART_USART_CTS
Enhanced UART TX: ENHANCED_uart_UART_TX
Enhanced clock_source: internal
Enhanced baud_rate: 115200
Enhanced flow_control: True
--- USART Serialized JSON ---
{
  "Interface": {
    "fields": {
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 10,
                "name": "MCU_USART_uart_UART_TX",
                "properties": {},
                "type_name": "Net"
              }
            },
            "RX": {
              "Net": {
                "id": 11,
                "name": "MCU_USART_uart_UART_RX",
                "properties": {},
                "type_name": "Net"
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      },
      "CK": {
        "Net": {
          "id": 12,
          "name": "MCU_USART_USART_CK",
          "properties": {},
          "type_name": "Net"
        }
      },
      "RTS": {
        "Net": {
          "id": 13,
          "name": "MCU_USART_USART_RTS",
          "properties": {},
          "type_name": "Net"
        }
      },
      "CTS": {
        "Net": {
          "id": 14,
          "name": "MCU_USART_USART_CTS",
          "properties": {},
          "type_name": "Net"
        }
      }
    },
    "promotion_by_type": {
      "Usart": ""
    }
  }
}
--- Enhanced USART Serialized JSON ---
{
  "Interface": {
    "fields": {
      "uart": {
        "Interface": {
          "fields": {
            "TX": {
              "Net": {
                "id": 17,
                "name": "ENHANCED_uart_UART_TX",
                "properties": {},
                "type_name": "Net"
              }
            },
            "RX": {
              "Net": {
                "id": 18,
                "name": "ENHANCED_uart_UART_RX",
                "properties": {},
                "type_name": "Net"
              }
            }
          },
          "promotion_by_type": {
            "Uart": ""
          }
        }
      },
      "clock_source": {
        "String": "internal"
      },
      "baud_rate": {
        "Int": 115200
      },
      "flow_control": {
        "Bool": true
      }
    },
    "promotion_by_type": {
      "EnhancedUsart": ""
    }
  }
}
Module {
    name: "<root>",
    source: "test.zen",
}
[]
