crates/pcb-zen-core/tests/snapshots/interface__interface_net_symbol_copy.snap
---
source: crates/pcb-zen-core/tests/interface.rs
expression: output
---
Template net: Net { name: "POWER", id: "<ID>", properties: {"symbol_name": Value("PowerSymbol")}, symbol: Value(Symbol { name: "PowerSymbol", pins: {"1": Value("VCC"), "2": Value("GND")} }) }
Instance power net: Net { name: "PWR_POWER", id: "<ID>", properties: {"symbol_name": Value("PowerSymbol")}, symbol: Value(Symbol { name: "PowerSymbol", pins: {"1": Value("VCC"), "2": Value("GND")} }) }
Instance ground net: Net { name: "PWR_GND", id: "<ID>", symbol: Value(NoneType) }
Module {
    name: "<root>",
    source: "test.zen",
}
[]
